improved install scripts
