# middleware_api/lambda/common/schemas/roles.py
@@ -25,7 +25,6 @@ class RoleItem(BaseModel):
 class RoleCollection(BaseModel):
     items: List[RoleItem]
     links: Optional[List[RoleLink]]
-    previous_evaluated_key: Optional[str]
     last_evaluated_key: Optional[str]
 
     class Config:
